# asr-engine

./: .gitignore  README.md  config.toml  llm_client.py  llm_configs.example.json  main.py  model_manager.py  prompt.txt  pyproject.toml  run.sh  run_dev.sh  run_frontend.sh  run_server.py
frontend/: app.js  config.js  index.html  llm-config.html  llm-config.js  models.html  models.js
static/: app.js  llm-config.css  llm-config.js  models.css  models.js  style.css
templates/: index.html  llm-config.html  models.html
